change sizes from px to percents. still not responsive, need to fix

--- a/css/product.css
+++ b/css/product.css
@@ -1,15 +1,16 @@
 /* logo */
 
 #logo img {
-    height:130px;
-    width:130px;
-    margin-left: 40px;
+    /* height:130px;
+    width:130px; */
+    width: 10%;
+    margin-left: 5%;
 }
 /* body - responsive width in percent */
 body {
     font-family: sans-serif;
     width: 90%;
-    padding: 70px;
+    padding: 3%;
 }
 
 h1 {
@@ -22,7 +23,7 @@ h1 {
 nav {
     position: sticky;
     display: flex;
-    height: 50px;
+    height: 40px;
     background-color: rgba(30, 108, 160, 0.918);
     top: 0; /* for the sticky nav bar*/
     
@@ -31,9 +32,8 @@ nav {
     
 }
 nav ul {
-    left: 100px;
+    left: 8%;
     position: relative;
-    margin-top: 50px;
     margin-top: auto;
     margin-bottom: auto;
    
@@ -53,6 +53,12 @@ nav li a {
 }
 #comparisonTable {
     border:2px solid rgba(30, 108, 160, 0.527);
+    width: 80%;
+    margin-left:auto; 
+    margin-right:auto;
+}
+#th {
+  
 }
 /* table design */
 #comparisonTable tr:nth-child(even){
@@ -75,7 +81,7 @@ nav li a {
 
 video {
     border: 2px rgba(30, 108, 160, 0.527) solid;
-    margin-top:50px;
+    margin-top:3%;
     width: 50%;
     height: auto;
   }
@@ -88,7 +94,7 @@ video {
 /* positioning image div */
 .camdiv {
     height: 300px;
-    margin-left: 200px;
+    margin-left: 10%;
     margin-right: auto;
     display: block; 
     float:left;
@@ -110,13 +116,13 @@ video {
     bottom: 0;
     right: 0;
     float:right;
-    width: 100px;
+    width: 5%;
     
   }
   div.bottomleft {
     position: fixed;
     float: left;
-    width: 100px;
+    width: 5%;
     top: 0;
     left: 0;
     
@@ -124,7 +130,7 @@ video {
   div.topright {
     position: fixed;
     float: left;
-    width: 100px;
+    width: 5%;
     top: 0;
     right: 0;
     
@@ -132,7 +138,7 @@ video {
   div.topleft {
     position: fixed;
     float: left;
-    width: 100px;
+    width: 5%;
     bottom: 0;
     left: 0;
     
@@ -140,7 +146,7 @@ video {
 
   /* fitures list */
   #fituresList {
-    margin-top:20px;
+    margin-top:3%;
   }
 
   
@@ -151,31 +157,34 @@ video {
   }
 
   .box {
+    
     float:left;
-    width: 200px;
-    height: 200px;
-    padding: 10px;
+    /* width: 200px;
+    height: 200px; */
+    width: 15%;
+    
+    padding: 2%;
 }
 #licontainer {
     
-    height: 200px;
-    float:left;
+    height: 100px;
+    width: 60%;
+    float:right;
 }
 /* clear - after using absolute position */
 .container { 
     clear: both;
-    
-    
+   
 } 
 
 #tableSection {
-    margin-top: 300px;
+    margin-top: 20%;
 }
 .btnsDiv {
-    margin-top: 100px;
+    /* margin-top: 10%; */
     border:1px black solid;
-    width:100px;
-    height: 100px;
+    /* width:100px;
+    height: 100px; */
 }
 
 a.button {
@@ -183,7 +192,8 @@ a.button {
     border-radius: 12px;
     background-color: rgba(30, 108, 160, 0.918);
     color: rgb(255, 255, 255); 
-    padding: 8px 18px;
+    /* padding: 8px 18px; */
+    padding:2% 4%;
     font-size: 20px;
     text-decoration:none;
    
